[package]
name = "mini-lisp-interpreter"
version = "0.1.0"
edition = "2021"
resolver = "1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.19.8"
regex = "1.7.0"

[build-dependencies]
lalrpop = { version = "0.19", features = ["lexer"] }